What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

November 25, 2010
* [antonin] fix compilation and DLL creation of libopenjpeg with MSYS/MinGW (from vincent.torri, see issue 47 on googlecode)

November 22, 2010
! [antonin] xcode : changed to native architecture build by default
* [antonin] reverted 'include "../opj_config.h"' to 'include "opj_config.h"'

November 17, 2010
! [antonin] install man pages by default. install CHANGES and LICENSE
! [antonin] minor changes in cmake files (from winfried)

November 16, 2010
! [antonin] minor changes in cmake flags

November 15, 2010
! [antonin] xcode project rewrite.
! [antonin] changed imagetopng() function to correctly deal with non-standard bit-depths. Add png support for win32. (from winfried)
* [antonin] minor changes in header inclusions
* [antonin] complete rewrite of opj_convert.c with correct values (from winfried)

November 11, 2010
- [antonin] removed call to dirent.h in jp3d;

October 28, 2010
* [ben.boeckel] Set the soname and soversion on the jpwl library with CMake
+ [ben.boeckel] Install jpwl binaries with CMake

October 26, 2010
* [ben.boeckel] Install symlinks to versioned directory headers when using CMake
+ [ben.boeckel] Set the library version on jp3d when using CMake

October 25, 2010
* [ben.boeckel] Fix jp3d version

October 24, 2010
* [antonin] Fixed doxygen data inside source code (from winfried)

October 22, 2010
* [ben.boeckel] Don't install jp3d and libopenjpeg headers to the same place

October 22, 2010
* [ben.boeckel] Install man pages when using CMake

October 22, 2010
! [ben.boeckel] Default to building shared libraries

October 22, 2010
* [antonin] Patch to support the MSVC Win 64 builds (from szekerest)

October 22, 2010
* [antonin] Currently the Visual Studio builds are broken in the SVN. Attached a patch to fix this issue (from szekerest)

October 22, 2010
* [szukw000] replaced 'cp -d' with 'cp -P' for MacOSX

October 22, 2010